--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         </div>
     </section>
-    <div class="-scroll px-5 dms">
+    <div class="car-card-scroll px-5 dms">
         <div class="d-flex  flex-nowrap mt-5 " style="width:fit-content">
 
             <div class="d-flex flex-column car-card me-4">
